kubernetes/main/apps/network/external-services/minio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-ui
  namespace: network
spec:
  ports:
    - protocol: TCP
      port: 9001
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-ui
  namespace: network
subsets:
  - addresses:
      - ip: 10.1.30.80
    ports:
      - port: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: minio-api
  namespace: network
spec:
  ports:
    - protocol: TCP
      port: 9000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-api
  namespace: network
subsets:
  - addresses:
      - ip: 10.1.30.80
    ports:
      - port: 9000
